# sophia

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG-CN.md  CHANGELOG.md  CONTRIBUTING-CN.md  CONTRIBUTING.md  Cargo.toml  INSTALL-CN.md  INSTALL.md  LICENSE  README-CN.md  README.md  package-lock.json  package.json  rustfmt.toml  sophia.toml  tsconfig.json  tsconfig.test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  pages.yml
cli/: Cargo.toml
cli/examples/benchmark/: baseline_py.rs  main.rs  problem.rs  problems.rs  report.rs  retry.rs  sophia_mode.rs  value_json.rs
cli/examples/e2e/: harness.rs  main.rs
cli/examples/e2e/cases/: g1_basics.rs  g2_effects.rs  g3_heuristic.rs  g4_complex.rs  g5_file.rs  g6_tree.rs  mod.rs
cli/src/: commands.rs  lib.rs  main.rs  project.rs  render.rs  verifier_store.rs
cli/src/graph_cmd/: gate.rs  mod.rs
cli/tests/: intent_matrix.rs  pipeline.rs
core/exec-ir/: Cargo.toml
core/exec-ir/src/: edge.rs  graph.rs  lib.rs
core/exec-ir/tests/: graph.rs
core/exec-ir/tests/snapshots/: graph__exec_graph_structure.snap
core/hir/: Cargo.toml
core/hir/src/: builtins.rs  closure.rs  error.rs  index.rs  lib.rs  resolve.rs  scope.rs
core/hir/tests/: closure.rs  resolve.rs
core/hir/tests/snapshots/: resolve__asg_index_todo_domain.snap
core/semantic/: Cargo.toml
core/semantic/src/: contract_layer.rs  effect.rs  effect_layer.rs  error.rs  lib.rs  model.rs  ty.rs  type_layer.rs  union_check.rs
core/semantic/tests/: analyze.rs
core/semantic/tests/snapshots/: analyze__semantic_model_fingerprint.snap
core/syntax/: Cargo.toml  build.rs  grammar.js  tree-sitter.json
core/syntax/examples/: CompleteTodo.sophia  Control.sophia  TodoDomain.sophia
core/syntax/src/: ast.rs  error.rs  grammar.json  lib.rs  lower.rs  node-types.json  parser.c  span.rs  tree.rs
core/syntax/src/snapshots/: sophia_syntax__tests__complete_todo_cst.snap
core/syntax/tests/: lowering.rs
docs/: diagnostic_codes.md  heuristic_workflow.md  roadmap.md  sophia_language_design.md  status.md
docs/cn/: benchmark_runs.md  benchmark_test.md  code_quality_review.md  concepts.md  custom_lib_usage.md  dev_checklist_v0.md  dev_checklist_v1.md  dev_checklist_v2.md  e2e_test.md  engineering_architecture.md  engineering_notes.md  file_lib.md  goal_node_design_proposal.md  graph_action_used.md  heuristic_workflow.md  http_lib.md  json_lib_design.md  language_design.md  language_implementation.md  milestone_0_3.md  roadmap.md  sophia_arxiv_technical_report_zh_v0_2.md  sophia_arxiv_technical_report_zh_v0_3.md  sophia_language_design.md  status.md  stdlib_design.md  stdlib_implementation.md  type_system.md  unit_test.md  v0_2_regression_matrix.md  wasm_codegen.md  workflow_graph_spec.md
docs/en/: benchmark_runs.md  benchmark_test.md  concepts.md  dev_checklist_v0.md  dev_checklist_v1.md  dev_checklist_v2.md  diagnostic_codes.md  e2e_test.md  engineering_architecture.md  engineering_notes.md  (+17 more)
lsp/: Cargo.toml
lsp/src/: analysis.rs  convert.rs  lib.rs  server.rs
lsp/tests/: analysis.rs
runtime/: Cargo.toml
runtime/src/: error.rs  host.rs  interp.rs  lib.rs  trace.rs  validate.rs  value.rs  value_wire.rs  verify.rs  wasm_host.rs  wasm_program.rs
runtime/tests/: interpret.rs  trace.rs  verify.rs
scripts/: run_benchmark.sh  run_e2e.sh  update_status.mjs
stdlib/: Cargo.toml
stdlib/libs/file/: file.md  library.toml
stdlib/libs/http/: http.md  library.toml
stdlib/src/: discover.rs  lib.rs  native_host.rs
stdlib/tests/: assets.rs  library_demo.rs
stdlib/tests/fixtures/sophia_libs/hash_sophia/: hash_sophia.md  library.toml
stdlib/tests/fixtures/sophia_libs/hash_sophia/src/: digest.sophia
stdlib/tests/fixtures/sophia_libs/hash_wasm/: hash_wasm.md  library.toml
stdlib/tests/fixtures/sophia_libs/json/: json.md  library.toml
stdlib/tests/fixtures/sophia_libs/json/src/: JsonInvalid.sophia  JsonIsDigit.sophia  JsonIsEscape.sophia  JsonIsWhitespace.sophia  JsonParseArray.sophia  JsonParseInt.sophia  JsonParseObject.sophia  JsonParseOk.sophia  JsonParseString.sophia  JsonParseValue.sophia  JsonSkipWhitespace.sophia  JsonValid.sophia  ValidateJson.sophia
tools/check/: Cargo.toml
tools/check/src/: lib.rs  strip_assist.rs
tools/check/tests/: checker.rs
tools/codegen/: Cargo.toml
tools/codegen/src/: abi.rs  build.rs  contract.rs  emit.rs  error.rs  lib.rs
tools/codegen/tests/: contract.rs  diff.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
workflow/engine/: Cargo.toml
workflow/engine/src/: code_check.rs  implement_loop.rs  lib.rs  loop_steps.rs  prompts.rs  pseudocode_check.rs  scheduler.rs  select_materialize.rs  step.rs  traversal.rs
workflow/engine/tests/: implement_loop.rs  loop_steps.rs  scheduler.rs  select_materialize.rs  step.rs  traversal.rs
workflow/engine/tests/common/: mod.rs
workflow/graph-db/: Cargo.toml
workflow/graph-db/src/: active_context.rs  assessment.rs  decomposition.rs  edge.rs  error.rs  event.rs  factory.rs  ids.rs  lib.rs  meta.rs  payload.rs  store.rs
workflow/graph-db/tests/: active_context.rs  append_only.rs  assessment.rs  decomposition.rs  factory.rs  store.rs
workflow/graph-db/tests/common/: mod.rs
workflow/llm/: Cargo.toml
workflow/llm/src/: backend.rs  client.rs  lib.rs  structured.rs
workflow/llm/tests/: structured.rs
workflow/prompt/: Cargo.toml
workflow/prompt/assets/: sophia_syntax_baseline.md
workflow/prompt/schemas/: decision_node.json  decompose_result.json  design_result.json  implement_result.json  pseudo_check.json  repair_result.json
workflow/prompt/src/: lib.rs
workflow/prompt/templates/: decision.md.jinja  decompose.md.jinja  design_solution.md.jinja  implement_design.md.jinja  repair_code.md.jinja  revise_design.md.jinja
workflow/prompt/tests/: render.rs
workflow/prompt/tests/snapshots/: render__decision_render.snap  render__decompose_render.snap  render__design_solution_render.snap  render__sophia_syntax_baseline.snap
(+257 files in other folders)
