[package]
name = "sophia-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "同步解释器与 HostRegistry；Sophia runtime 语义不含 async/await"

[dependencies]
sophia-semantic.workspace = true
sophia-syntax.workspace = true
sophia-exec-ir.workspace = true
serde = { workspace = true }
thiserror.workspace = true
# 三方 WASM 库 host：解释模式经 wasmi 加载 host.wasm 执行（路线 B 的 WasmHostFn,见
# docs/stdlib_design.md §六.3）。仅加载三方 WASM 库时实例化;标准库 native host 零 wasm 开销。
wasmi.workspace = true

[dev-dependencies]
sophia-hir.workspace = true
serde_json.workspace = true
# 差测试 / WasmHostFn 测试用 wasm-encoder 手工 emit 小 host.wasm（见 docs/stdlib_design.md §六.1）。
wasm-encoder.workspace = true
