[package]
name = "sophia-stdlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sophia 标准库内容层：库清单 + 提示词资产 + native host（reqwest / std::fs）"

# 标准库**内容**层（见 docs/stdlib_design.md / docs/stdlib_implementation.md）。每个标准库一个
# `libs/<lib>/` 目录（清单 + 资产 + 可选 Sophia 源码），编译进二进制（`include_str!`）。提供：
# - standard_registry()：从内置清单构建 LibraryRegistry（各层契约只读源）；
# - register_native_hosts(project_root) / mock_hosts()：把库 op 的真实 / mock 实现注册进 HostRegistry。
# 归协调层之下、core 之上（可做 IO：native host 用 reqwest / std::fs）；core 不依赖本 crate。

[dependencies]
sophia-library.workspace = true
sophia-runtime.workspace = true
reqwest.workspace = true

[dev-dependencies]
sophia-hir.workspace = true
sophia-semantic.workspace = true
sophia-syntax.workspace = true
wasm-encoder.workspace = true
